--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@casl/ability": "^6.7.3",
+    "@casl/vue": "^2.2.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -27,13 +29,16 @@
     "element-plus": "^2.9.2",
     "flatpickr": "^4.6.13",
     "jwt-decode": "^3.1.2",
+    "maska": "^2.1.11",
     "moment": "^2.29.4",
     "pinia": "^2.3.0",
     "vue": "^3.2.20",
     "vue-flatpickr-component": "^11.0.3",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-imask": "^6.4.3"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.3.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/compiler-sfc": "^3.2.20",
     "autoprefixer": "^10.4.16",
