--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
     "element-plus": "^2.9.2",
+    "event-source-polyfill": "^1.0.31",
     "flatpickr": "^4.6.13",
     "jwt-decode": "^3.1.2",
     "maska": "^2.1.11",
